--- a/src/aim4-shape-sensitivity/aim4.tex
+++ b/src/aim4-shape-sensitivity/aim4.tex
@@ -1,5 +1,5 @@
-\chapter{This Will Definitely Work on Shoulder Implants, Right?\protect\footnotemark}
-\footnotetext{No}
+\chapter{This Will Definitely Work on Shoulder Implants, Right?}{\renewcommand*{\thefootnote}{\fnsymbol{footnote}}\footnotetext{Submitted for publication to the Journal of Computers in Biology and Medicine}
+
 Another common arthroplasty (TSA) procedure is total shoulder replacement, which involves the removal and replacement of the distal end of the glenoid/scapula and the proximal end of the humeral head.
 Researchers, implant manufacturers, and surgeons, driven by similar motivations for understanding post-operative Total Knee Arthroplasty (TKA) kinematics, show equal interest in examining post-operative TSA kinematics.
 Despite differing from TKA outcomes, a significant portion of TSA patients report dissatisfaction, predominantly attributing it to mechanical limitations or instability.
