--- a/src/aim4-shape-sensitivity/ss_src/3_methods.tex
+++ b/src/aim4-shape-sensitivity/ss_src/3_methods.tex
@@ -78,7 +78,7 @@ Therefore, for every set of $x,y,z$ rotations, three distinct shape differences 
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.5\textwidth]{~/figures/raster/rTSA_humeral_rotation_axes.png}
-  \caption{A generic manufacturer-provided humeral implant with label x, y, and z rotation axis. Additionally, each of the ,$\delta_x$,$\delta_y$, and $\delta_z$ are shown, corresponding to the rotational directions of each shape descriptor difference.}
+  \caption[A generic manufacturer-provided humeral implant with labeled x, y, and z rotation axis]{A generic manufacturer-provided humeral implant with labeled x, y, and z rotation axis. Additionally, each of the ,$\delta_x$,$\delta_y$, and $\delta_z$ are shown, corresponding to the rotational directions of each shape descriptor difference.}
   \label{fig:rot-axis}
 \end{figure}
 
