--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -3878,7 +3878,7 @@
 }
 
 @phdthesis{hannahComputerMatchingAreas1977,
-  title = {Computer {{Matching}} of {{Areas}} in {{Stereo IMages}}},
+  title = {Computer {{Matching}} of {{Areas}} in {{Stereo Images}}},
   author = {Hannah, Marsha Jo},
   year = {1977},
   langid = {english},
