--- a/src/JTML/chX-jtml.tex
+++ b/src/JTML/chX-jtml.tex
@@ -98,18 +98,44 @@ Due to poor sensitivity for measuring out-of-plane translation with monocular vi
 
 \begin{landscape}
 	\begin{table}[h!]
-		\small
 		\centering
 		\caption{RMS differences between NFD initial estimates and human supervised kinematics}
 		\label{tab:nfd-rms}
 		\begin{tabularx}{1.0\linewidth}[h!]{XXXXXXXX}
 			\hline
-			Implant & Images       & $x_{trans} (mm)$ & $y_{trans} (mm)$ & $z_{trans} (mm)$ & $z_{rot} (^{\circ})$ & $x_{rot} (^{\circ})$ & $y_{rot} (^{\circ})$ \\ \hline
-			Femoral & CNN          & 2.37             & 0.71             & 17.59            & 2.54                 & 2.45                 & 4.75                 \\
-			Femoral & Ground-Truth & 2.06             & 0.57             & 13.53            & 0.85                 & 1.42                 & 4.00                 \\
-			Tibial  & CNN          & 2.06             & 1.49             & 29.93            & 0.94                 & 5.59                 & 9.47                 \\
-			Tibial  & Ground-Truth & 2.05             & 0.87             & 14.60            & 0.55                 & 4.73                 & 6.23                 \\ \hline
+			Implant                  & Images       & $x_{trans} (mm)$ & $y_{trans} (mm)$ & $z_{trans} (mm)$ & $z_{rot} (^{\circ})$ & $x_{rot} (^{\circ})$ & $y_{rot} (^{\circ})$ \\ \hline
+			\multirow{2}{*}{Femoral} & CNN          & 2.37             & 0.71             & 17.59            & 2.54                 & 2.45                 & 4.75                 \\
+			                         & Ground-Truth & 2.06             & 0.57             & 13.53            & 0.85                 & 1.42                 & 4.00                 \\ \\
+			\multirow{2}{*}{Tibial}  & CNN          & 2.06             & 1.49             & 29.93            & 0.94                 & 5.59                 & 9.47                 \\
+			                         & Ground-Truth & 2.05             & 0.87             & 14.60            & 0.55                 & 4.73                 & 6.23                 \\ \hline
 		\end{tabularx}
+	\end{table}
+
+
+	\begin{table}[h!]
+		\centering
+		\caption{RMS differences between DIRECT-JTA optimized and human supervised kinematics}
+		\label{tab:direct-rms}
+		\begin{threeparttable}
+			\begin{tabularx}{\linewidth}{XXXXXXXXX}
+				\hline
+				Test Set                  & Image Group & Num. Images & A/P (mm) & S/I (mm)      & M/L (mm)      & Flx/Ext ($^{\circ}$) & I/E ($^{\circ}$) & V/V ($^{\circ}$) \\ % Note mark here
+				\hline
+				\multirow{2}{*}{Standard} & Inside AZ   & 187         & 0.69     & 0.52\tnote{b} & 1.75\tnote{a} & 0.73\tnote{a}        & 3.38             & 1.94\tnote{a}    \\
+				                          & Outside AZ  & 83          & 0.69     & 0.47\tnote{c} & 0.917         & 1.03                 & 1.81             & 0.61             \\ \\
+				\multirow{2}{*}{Naive}    & Inside AZ   & 47          & 0.80     & 0.74          & 1.72          & 1.39                 & 4.04             & 2.48\tnote{d}    \\
+				                          & Outside AZ  & 75          & 0.69     & 0.64          & 0.69          & 1.031                & 1.15             & 0.85             \\ \hline
+			\end{tabularx}
+			\begin{tablenotes}
+				\footnotesize
+				\item[a] Pairwise difference ($p<0.05$) for Standard Inside AZ vs Standard Outside AZ % Note text here
+				\item[b] Pairwise difference ($p<0.05$) for Standard Inside AZ vs Naive Inside AZ
+				\item[c] Pairwise difference ($p<0.05$) for Standard Outside AZ vs Naive Outside AZ
+				\item[d] Pairwise difference ($p<0.05$) for Naive Inside AZ vs Naive Outside AZ
+
+				AZ = Ambiguous Zone
+			\end{tablenotes}
+		\end{threeparttable}
 	\end{table}
 \end{landscape}
 
@@ -117,36 +143,6 @@ Due to poor sensitivity for measuring out-of-plane translation with monocular vi
 RMS differences between DIRECT-JTA optimized kinematics and human-supervised kinematics were sub-millimeters for all in-plane translations (\cref{tab:direct-rms}).
 Mediolateral translations and out-of-plane rotation differences were smaller when the pose of the tibia was outside the ambiguous zone.
 The RMS differences for the completely naïve test set were within 0.5 mm or 0.5 deg compared to the standard test set, indicating similar performance on the entirely novel dataset.
-
-
-\begin{table}[ht]
-	\small
-	\centering
-	\caption{RMS differences between DIRECT-JTA optimized and human supervised kinematics}
-	\label{tab:direct-rms}
-	\begin{threeparttable}
-		\begin{tabularx}{\linewidth}{XXXXXXXXX}
-			\hline
-			Test Set & Image Group & Num. Images & A/P (mm) & S/I (mm)      & M/L (mm)      & Flx/Ext ($^{\circ}$) & I/E ($^{\circ}$) & V/V ($^{\circ}$) \\ % Note mark here
-			\hline
-			Standard & Inside AZ   & 187         & 0.69     & 0.52\tnote{b} & 1.75\tnote{a} & 0.73\tnote{a}        & 3.38             & 1.94\tnote{a}    \\ \\
-			Standard & Outside AZ  & 83          & 0.69     & 0.47\tnote{c} & 0.917         & 1.03                 & 1.81             & 0.61             \\ \\
-			Naive    & Inside AZ   & 47          & 0.80     & 0.74          & 1.72          & 1.39                 & 4.04             & 2.48\tnote{d}    \\ \\
-			Naive    & Outside AZ  & 75          & 0.69     & 0.64          & 0.69          & 1.031                & 1.15             & 0.85             \\ \hline
-		\end{tabularx}
-		\begin{tablenotes}
-			\footnotesize
-			\item[a] Pairwise difference ($p<0.05$) for Standard Inside AZ vs Standard Outside AZ % Note text here
-			\item[b] Pairwise difference ($p<0.05$) for Standard Inside AZ vs Naive Inside AZ
-			\item[c] Pairwise difference ($p<0.05$) for Standard Outside AZ vs Naive Outside AZ
-			\item[d] Pairwise difference ($p<0.05$) for Naive Inside AZ vs Naive Outside AZ
-
-			AZ = Ambiguous Zone
-		\end{tablenotes}
-	\end{threeparttable}
-\end{table}
-
-
 
 There was one femoral blunder and 43 tibial blunders out of 392 test images. Using the definition of the ambiguous zone as apparent tibial varus/valgus rotation less than 3.6 deg, 11\% of images have a tibial blunder within this zone, compared to 3.2\% outside. Sixty-six percent of tibial blunders were due to symmetry ambiguities (Fig \ref{fig:sym-trap}).
 
